Colaboratory を使用して作成しました

--- a/algorithm_yonedamasataka.ipynb
+++ b/algorithm_yonedamasataka.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "algorithm_yonedamasataka.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO4DQ4oWk7PumqeYMs7EPCm",
+      "authorship_tag": "ABX9TyMr7hNCySPauvOO/n1/HjRz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,12 +42,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 読み方が分からないのでとりあえず節末問題を眺めながら進もう\n",
-        "\n",
-        "# 問題 2.1.1 以下の数のうち整数をすべて選べ、とか #=> 省略\n",
-        "\n",
-        "# 問題 2.1.2 省略\n",
-        "\n",
+        "# 読み方が分からないのでとりあえず問題やプログラムを眺めながら進もう\n",
         "# 問題 2.1.3 A_1, A_2, A_3 を入力し、A_1 A_2 A_3 を出力するプログラムを作成する。例 2 8 8 => 128\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
@@ -1237,7 +1231,7 @@
         "id": "qJo-1Uw7bll5",
         "outputId": "f68d5609-790e-49e0-f868-d5b5dac7d297"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1260,7 +1254,7 @@
         "id": "1Z0GZ9xFbutf",
         "outputId": "34a49663-9c5d-4755-bee6-eddb88fa64d1"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1333,7 +1327,7 @@
         "id": "TomJ0yQhdVc4",
         "outputId": "b2bae628-81c2-4a72-c63e-4ce41e67e4a0"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1356,7 +1350,7 @@
         "id": "f5XCkYr2dVZB",
         "outputId": "19705944-ce66-44d8-bab4-2f6f5f31a508"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1395,7 +1389,7 @@
         "id": "8dtJhW6z48aP",
         "outputId": "19ae60ef-6c02-4573-d5ce-50a28d46edaa"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1419,7 +1413,7 @@
         "id": "_AXihkCE48Ws",
         "outputId": "ed944381-2626-43f0-a9fd-cb036c16ec68"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1452,7 +1446,7 @@
         "id": "Le59Ve3eDcsD",
         "outputId": "51c8146d-4f38-4d3f-c566-64c3f5899b9b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1475,7 +1469,7 @@
         "id": "bb5OL3X7D3-T",
         "outputId": "94c4668d-4348-45fd-f4a8-e09c95aa4685"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1499,11 +1493,11 @@
         "int main () {\n",
         "    int N; cin >> N;\n",
         "    for (int i = 2; i <= N; i++) {\n",
-        "        bool isPrime = true;\n",
+        "        bool isprime = true;\n",
         "        for (int j = 2; j < i; j++) {\n",
-        "            if (i % j == 0) isPrime = false;\n",
+        "            if (i % j == 0) isprime = false;\n",
         "        }\n",
-        "        if (isPrime) cout << i << \" \";\n",
+        "        if (isprime) cout << i << \" \";\n",
         "    }\n",
         "}"
       ],
@@ -1514,7 +1508,7 @@
         "id": "yaHC5abO48Sl",
         "outputId": "21027053-41dd-479c-92eb-38794141eca5"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1537,7 +1531,7 @@
         "id": "7NpaUgCy6Gza",
         "outputId": "e41af7bf-513b-4022-9fdd-7cce1a3b03cd"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1564,7 +1558,7 @@
         "id": "Bg7_L4FF6Gux",
         "outputId": "f1ca971c-63da-42d5-8ec5-ebb1d04cb1f0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1592,15 +1586,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "iA9PT-kyMvic"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 問題 2.5.6 半開区間 [a, b) と 半開区間 [c, d) が共通部分を持つ条件を式で表す\n",
@@ -1616,7 +1601,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 問題 2.5.7 以下のプログラムが終了した時の cnt の値。このプログラムの計算量。\n",
+        "# 問題 2.5.7 以下のプログラムが終了した時の cnt の値とこのプログラムの計算量を求める\n",
         "#=> (N - 1) * N / 2 => O(N^2)\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
@@ -1639,7 +1624,7 @@
         "id": "9ReVmI2TJ6Uo",
         "outputId": "c183a377-dd66-432a-85ac-3117ddd0596a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1662,7 +1647,7 @@
         "id": "bPqVKKDbLxrT",
         "outputId": "f5843941-3365-4c12-c8fa-3c5544622ba2"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1676,10 +1661,151 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# p.73 約数をすべて出力する\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main () {\n",
+        "    long N; cin >> N;\n",
+        "    for (long i = 1; i * i <= N; i++) {\n",
+        "        if (N % i != 0) continue;\n",
+        "        cout << i << endl;\n",
+        "        if (i != N / i) {\n",
+        "            cout << N / i << endl;\n",
+        "        }\n",
+        "    }\n",
+        "}"
       ],
       "metadata": {
-        "id": "44K-mxZWORKM"
+        "id": "44K-mxZWORKM",
+        "outputId": "3eb3f8eb-9a4b-4e8d-cc96-1213cec6483a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 20 |./a.out "
+      ],
+      "metadata": {
+        "id": "TU-eVty_ORF2",
+        "outputId": "1c09e141-a2b0-4e27-e872-9823aa73d898",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "20\n",
+            "2\n",
+            "10\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 素数判定\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "bool isprime (long N) {\n",
+        "    for (long i = 2; i * i <= N; i++) {\n",
+        "        if (N % i == 0) return false;\n",
+        "    }\n",
+        "    return true;\n",
+        "}\n",
+        "int main () {\n",
+        "    int N; cin >> N;\n",
+        "    if (isprime(N)) cout << \"isprime\" << endl;\n",
+        "    else cout << \"is NOT prime\" << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "rFOa89cTTzMT",
+        "outputId": "19d1a42c-8a72-435a-afbd-dab0c44c43e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 29 |./a.out "
+      ],
+      "metadata": {
+        "id": "6xmzuSy8TzII",
+        "outputId": "b0309c96-af28-4f49-d3ba-abdba064f877",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "isprime\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "iA9PT-kyMvic"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 素因数分解\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main () {\n",
+        "    long N; cin >> N;\n",
+        "    \n",
+        "}"
+      ],
+      "metadata": {
+        "id": "s6Yp_YpbVsq4"
       },
       "execution_count": null,
       "outputs": []
@@ -1690,7 +1816,18 @@
         ""
       ],
       "metadata": {
-        "id": "TU-eVty_ORF2"
+        "id": "nPXBQa59VsgI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "JQKPoc-LVscE"
       },
       "execution_count": null,
       "outputs": []
@@ -1709,7 +1846,8 @@
       "source": [
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
-        "using namespace std;"
+        "using namespace std;\n",
+        "int main () {}"
       ],
       "metadata": {
         "id": "Yz2dWZyrEeqE"
