--- a/numpyexercises.ipynb
+++ b/numpyexercises.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "numpyexercises.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,13 +46,13 @@
       "metadata": {
         "id": "CkFOfQhYMHJf"
       },
-      "execution_count": 9,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# numpy のバージョンと configuration を print する。\n",
+        "# numpy のバージョンと configuration を print する\n",
         "print (np.__version__)\n",
         "# np.show_config()"
       ],
@@ -69,7 +68,7 @@
         "id": "5-mqoRswWL_K"
       },
       "source": [
-        "# 実験 numpy がどんな関数やメソッドを持っているかは dir(np) とすればわかる。version も、show_config もある。\n",
+        "# 実験 numpy がどんな関数やメソッドを持っているかは dir(np) とすればわかる。version も、show_config もある\n",
         "# dir(np)"
       ],
       "execution_count": null,
@@ -91,7 +90,7 @@
         },
         "outputId": "98fb662b-2934-4047-9697-59e157d63909"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +119,7 @@
         "print(list(Z) == [0,0,0,0,0,0,0,0,0,0])\n",
         "print(np.array((1,2,3)))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,38 +137,17 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PnVJF210MHJs"
-      },
-      "source": [
-        "#### (4) 配列 array のメモリーサイズを調べる方法。\n"
-      ]
-    },
-    {
       "cell_type": "code",
-      "metadata": {
-        "id": "Wh6DdDVeMHJt",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "c7887022-b596-4ee8-8ab0-9f40ea5e3b28"
-      },
       "source": [
+        "# 配列 array のメモリーサイズを調べる方法\n",
         "Z = np.zeros((10,10))\n",
         "print(\"%d bytes\" % (Z.size * Z.itemsize))"
       ],
+      "metadata": {
+        "id": "PnVJF210MHJs"
+      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "800 bytes\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -199,102 +177,66 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "source": [
+        "# numpy の add 関数のドキュメントを得る\n",
+        "help(np.add)"
+      ],
       "metadata": {
         "id": "XdUtPqZGcCDw"
       },
-      "source": [
-        "#### (5) numpy の add 関数のドキュメントを得る。\n",
-        "\n",
-        "次のコメントアウトした %run `python  \"import numpy; numpy.info(numpy.add)\"` は使えなかった。\n",
-        "\n",
-        "help(np.add)\n",
-        "\n",
-        "でいいと思う。\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jaTzbl-AMHJx"
-      },
-      "source": [
-        "# %run `python  \"import numpy; numpy.info(numpy.add)\"`\n",
-        "\n",
-        "# 実験\n",
-        "\n",
-        "# np.info(np.add)\n",
-        "help(np.add)"
-      ],
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "f6_IHT_CMHJ2"
-      },
-      "source": [
-        "#### (6) 5番目のアイテムの値を 1 にする。\n"
-      ]
-    },
-    {
       "cell_type": "code",
-      "metadata": {
-        "id": "vdDjuYD9MHJ3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "afcdceed-184d-4b88-ad8b-3e7ac56fd5c1"
-      },
       "source": [
+        "# 5番目のアイテムの値を 1 にする\n",
+        "Z = np.zeros(10)\n",
         "Z[4] = 1\n",
         "print(Z)"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "f6_IHT_CMHJ2",
+        "outputId": "d2da92a7-6d73-49bd-b74f-b4c74361af10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PZWhMZ-0MHJ7"
-      },
-      "source": [
-        "#### (7) 値が10から49のベクトルを作る。\n"
-      ]
-    },
-    {
       "cell_type": "code",
-      "metadata": {
-        "id": "Q0AvApnpMHJ8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "3cfba9ec-9c21-4767-fd50-d9f2776be2f8"
-      },
       "source": [
+        "# 値が10から49のベクトルを作る\n",
         "Z = np.arange(10,50)\n",
         "print(Z)"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "PZWhMZ-0MHJ7",
+        "outputId": "f046d588-dcd8-41ea-fe04-6f1cd81aaa18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33\n",
             " 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -303,68 +245,64 @@
       "metadata": {
         "id": "KDhJsbQpe2n0",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 104
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ef16bc22-66d1-44c9-d86e-96c6ed36c40e"
+        "outputId": "7c980766-5eb1-4f7c-a65e-359ea814a2cf"
       },
       "source": [
         "# 実験\n",
+        "print(range(10,50)) #=> range(10, 50)\n",
+        "print(list(range(10,20)))\n",
+        "print(np.array(list(range(10,20))))\n",
+        "print()\n",
+        "print(type(range(10,50)))\n",
+        "print(type(list(range(10,20))))\n",
+        "print(type(np.array(list(range(10,20)))))\n",
+        "print(type(np.arange(10,20)))\n",
         "\n",
-        "print(range(10,50))\n",
-        "print(list(range(10,50)))\n",
-        "# print(np.ndarray(list(range(10,50))))\n",
-        "print(np.array(list(range(10,50))))\n",
-        "print(type(np.array(list(range(10,50)))))\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "range(10, 50)\n",
-            "[10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49]\n",
-            "[10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33\n",
-            " 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49]\n",
+            "[10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
+            "[10 11 12 13 14 15 16 17 18 19]\n",
+            "\n",
+            "<class 'range'>\n",
+            "<class 'list'>\n",
+            "<class 'numpy.ndarray'>\n",
             "<class 'numpy.ndarray'>\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "grxaLboUMHJ_"
-      },
-      "source": [
-        "#### (8) ベクトルを逆順にする。"
-      ]
-    },
-    {
       "cell_type": "code",
-      "metadata": {
-        "id": "xwEuIyFwMHKA",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "361c4b7c-0490-4d86-f4fb-5e15ab0b9887"
-      },
       "source": [
+        "# ベクトルを逆順にする\n",
         "Z = np.arange(10)\n",
         "Z = Z[::-1]\n",
         "print(Z)"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "grxaLboUMHJ_",
+        "outputId": "c5814e6e-3a66-4b22-a678-d18ef2f83f4f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[9 8 7 6 5 4 3 2 1 0]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -409,7 +347,7 @@
         "id": "aAf1CnOtMHKD"
       },
       "source": [
-        "#### (9) 3x3 の行列を作る。"
+        "#### (9) 3x3 の行列を作る"
       ]
     },
     {
@@ -583,7 +521,7 @@
         "id": "iEN85lf_MHKL"
       },
       "source": [
-        "#### (11) 3x3 の単位行列を作る。"
+        "#### (11) 3x3 の単位行列を作る"
       ]
     },
     {
@@ -646,7 +584,7 @@
         "id": "PhiquTxDMHKP"
       },
       "source": [
-        "#### (12) 要素がランダムな 3x3x3 の行列を作る。"
+        "#### (12) 要素がランダムな 3x3x3 の行列を作る"
       ]
     },
     {
@@ -763,7 +701,7 @@
         "id": "nf5y5vDjMHKT"
       },
       "source": [
-        "#### (13) 10x10 のランダムな値の配列を作って、その最大値と最小値を調べる。"
+        "#### (13) 10x10 のランダムな値の配列を作って、その最大値と最小値を調べる"
       ]
     },
     {
@@ -922,7 +860,7 @@
         "id": "eqDFt56MMHKa"
       },
       "source": [
-        "#### (15) 上下左右の端が 1 で、中が 0 の配列を作る。"
+        "#### (15) 上下左右の端が 1 で、中が 0 の配列を作る"
       ]
     },
     {
@@ -1004,7 +942,7 @@
         "id": "xuXOaNYIMHKe"
       },
       "source": [
-        "#### (16) すでにある配列に 0 で縁をつける。"
+        "#### (16) すでにある配列に 0 で縁をつける"
       ]
     },
     {
@@ -1259,7 +1197,7 @@
         "id": "IweJpzOBMHKm"
       },
       "source": [
-        "#### (18) 5x5 の行列で、対角線の1つ下に 1,2,3,4 の値を入れる。"
+        "#### (18) 5x5 の行列で、対角線の1つ下に 1,2,3,4 の値を入れる"
       ]
     },
     {
@@ -1334,7 +1272,7 @@
         "id": "LcZSSjb6MHKq"
       },
       "source": [
-        "#### (19) 8x8 のチェッカーボードパターンの行列を作る。"
+        "#### (19) 8x8 のチェッカーボードパターンの行列を作る"
       ]
     },
     {
@@ -1488,7 +1426,7 @@
         "id": "I7hwVU_fMHKy"
       },
       "source": [
-        "#### (21) tile 関数を使って 8x8 の行列を作る。"
+        "#### (21) tile 関数を使って 8x8 の行列を作る"
       ]
     },
     {
@@ -1569,7 +1507,7 @@
         "id": "Hnax8L2_MHK1"
       },
       "source": [
-        "#### (22) 5x5 のランダムな値の行列を正規化 normalize する。"
+        "#### (22) 5x5 のランダムな値の行列を正規化 normalize する"
       ]
     },
     {
@@ -1648,7 +1586,7 @@
         "id": "Zmaa2W40MHK4"
       },
       "source": [
-        "#### (23) カスタム dtype を作り、4つの unsigned bytes (RGBA) で色を表現する。"
+        "#### (23) カスタム dtype を作り、4つの unsigned bytes (RGBA) で色を表現する"
       ]
     },
     {
@@ -1807,7 +1745,7 @@
         "id": "EjX8oWhpMHK_"
       },
       "source": [
-        "#### (25) 1次元の配列で、3 と 8 の間の値の要素をマイナスにする。"
+        "#### (25) 1次元の配列で、3 と 8 の間の値の要素をマイナスにする"
       ]
     },
     {
@@ -2383,7 +2321,7 @@
         "id": "2Yh5MzJVMHLb"
       },
       "source": [
-        "#### (33) 昨日、今日、明日の日付を表示する。"
+        "#### (33) 昨日、今日、明日の日付を表示する"
       ]
     },
     {
@@ -2424,7 +2362,7 @@
         "id": "kyYnwBIhMHLg"
       },
       "source": [
-        "#### (34) 2016年7月の日付をすべて列挙する。"
+        "#### (34) 2016年7月の日付をすべて列挙する"
       ]
     },
     {
@@ -2464,7 +2402,7 @@
         "id": "39pZ4SJ_MHLj"
       },
       "source": [
-        "#### (35) 行列演算 ((A+B)*(-A/2)) を in place で実行する。in place とはコピーを作らずに計算すること。"
+        "#### (35) 行列演算 ((A+B)*(-A/2)) を in place で実行する。in place とはコピーを作らずに計算すること"
       ]
     },
     {
@@ -2724,7 +2662,7 @@
         "id": "uOmmJ7PkMHLx"
       },
       "source": [
-        "#### (39) 0 から 1 の値のサイズ 10 のベクトルを作る。0 と 1 は含まれないものとする。"
+        "#### (39) 0 から 1 の値のサイズ 10 のベクトルを作る。0 と 1 は含まれないものとする"
       ]
     },
     {
@@ -2793,7 +2731,7 @@
         "id": "Ymla6bxJMHL2"
       },
       "source": [
-        "#### (40) ランダムな値のサイズ 10 のベクトルを作り、ソートする。"
+        "#### (40) ランダムな値のサイズ 10 のベクトルを作り、ソートする"
       ]
     },
     {
@@ -2903,7 +2841,7 @@
         "id": "MLRqlfItMHL9"
       },
       "source": [
-        "#### (42) A と B の2つの配列が同等 equal かどうかを判別する。"
+        "#### (42) A と B の2つの配列が同等 equal かどうかを判別する"
       ]
     },
     {
@@ -2980,7 +2918,7 @@
         "id": "mkH_6xTJMHL_"
       },
       "source": [
-        "#### (43) 配列をイミュータブル(変更不可)にする。"
+        "#### (43) 配列をイミュータブル(変更不可)にする"
       ]
     },
     {
@@ -3016,7 +2954,7 @@
         "id": "aOc9Qqr6MHMD"
       },
       "source": [
-        "#### (44) デカルト座標を表す 10x2 の行列を極座標に変換する。"
+        "#### (44) デカルト座標を表す 10x2 の行列を極座標に変換する"
       ]
     },
     {
@@ -3109,7 +3047,7 @@
         "id": "3hlyNEGrMHMI"
       },
       "source": [
-        "#### (45) ランダムなサイズ 10 のベクトルを作り、最大値を 0 に置き換える。"
+        "#### (45) ランダムなサイズ 10 のベクトルを作り、最大値を 0 に置き換える"
       ]
     },
     {
@@ -3184,7 +3122,7 @@
         "id": "y1sAJclgMHML"
       },
       "source": [
-        "#### (46) x 座標と y 座標を持つ構造化配列 structured array を作り、[0,1]x[0,1] の範囲をカバーする。"
+        "#### (46) x 座標と y 座標を持つ構造化配列 structured array を作り、[0,1]x[0,1] の範囲をカバーする"
       ]
     },
     {
@@ -3654,7 +3592,7 @@
         "id": "lDs_S3h1MHMb"
       },
       "source": [
-        "#### (52) 座標を表すランダムな (10,2) の形のベクトルを考え、点と点の間の距離を計算する。"
+        "#### (52) 座標を表すランダムな (10,2) の形のベクトルを考え、点と点の間の距離を計算する"
       ]
     },
     {
@@ -4091,7 +4029,7 @@
         "\n",
         "とのこと。\n",
         "\n",
-        "この通りに作ればいいだけだよね。"
+        "この通りに作ればいいだけだよね"
       ]
     },
     {
@@ -4291,7 +4229,7 @@
         "id": "yaGjf1vpMHMq"
       },
       "source": [
-        "#### (58) 行列の各行の平均を引く。"
+        "#### (58) 行列の各行の平均を引く"
       ]
     },
     {
@@ -4382,7 +4320,7 @@
         "id": "CCvmGVcrMHMs"
       },
       "source": [
-        "#### (59) n 番目の列で配列をソートする。"
+        "#### (59) n 番目の列で配列をソートする"
       ]
     },
     {
@@ -4458,7 +4396,7 @@
         "id": "qBW8asyXMHMx"
       },
       "source": [
-        "#### (60) 2次元配列について、null 列があるかどうかを判定する。"
+        "#### (60) 2次元配列について、null 列があるかどうかを判定する"
       ]
     },
     {
@@ -4790,7 +4728,7 @@
         "id": "MwqqxYL8cBJg"
       },
       "source": [
-        "通常クラスのインスタンスは何もしないでも、name 属性がある。"
+        "通常クラスのインスタンスは何もしないでも、name 属性がある"
       ]
     },
     {
@@ -5388,7 +5326,7 @@
       },
       "source": [
         "\n",
-        "下記の例では、一旦 reshape して、axis を指定して unique をとった。"
+        "下記の例では、一旦 reshape して、axis を指定して unique をとった"
       ]
     },
     {
@@ -5497,7 +5435,7 @@
         "id": "VOsG4AnGCJAV"
       },
       "source": [
-        "4次元で数字が多いとイメージできないので、少なくして実験してみる。"
+        "4次元で数字が多いとイメージできないので、少なくして実験してみる"
       ]
     },
     {
@@ -5511,7 +5449,7 @@
       },
       "source": [
         "# 実験\n",
-        "# 3次元にして、それぞれの要素を2にしてみる。\n",
+        "# 3次元にして、それぞれの要素を2にしてみる\n",
         "\n",
         "A = np.random.randint(0,10,(2,2,2))\n",
         "print(A)\n",
@@ -5557,7 +5495,7 @@
       "source": [
         "`sum = A.reshape(A.shape[:-2] + (-1,)).sum(axis=-1)`\n",
         "\n",
-        "の reshape と shape がわからないので以下に実験してみる。"
+        "の reshape と shape がわからないので以下に実験してみる"
       ]
     },
     {
