Colaboratory を使用して作成しました

--- a/haskell_lipovaca.ipynb
+++ b/haskell_lipovaca.ipynb
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "u8BK7s-v9R6o"
       },
-      "execution_count": 48,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -66,9 +66,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "24c0c135-dd7a-447c-8820-ff19281f9477"
+        "outputId": "dfa4f79a-14ae-4456-948f-9887d3ae36bb"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,10 +87,22 @@
         "main = putStrLn \"hello, world\""
       ],
       "metadata": {
-        "id": "06N_qZSm-Ng0"
+        "id": "06N_qZSm-Ng0",
+        "outputId": "4510a88c-ac39-4b54-c32e-a9bc5a0101a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing hello.hs\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -98,10 +110,22 @@
         "!runghc hello.hs"
       ],
       "metadata": {
-        "id": "Cmw4Q8vV-RGh"
+        "id": "Cmw4Q8vV-RGh",
+        "outputId": "fc033af4-9fb9-41e5-9b17-18802072e896",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello, world\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -168,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "attributes": {
           "classes": [
@@ -178,16 +202,28 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "nQDSlSkL_66G"
+        "id": "nQDSlSkL_66G",
+        "outputId": "6f403df8-8644-4528-aba7-40f619f4d521",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "17\n"
+          ]
+        }
+      ],
       "source": [
         "!ghc -e '2 + 15'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "attributes": {
           "classes": [
@@ -197,16 +233,28 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "QNI5QMaO_66H"
+        "id": "QNI5QMaO_66H",
+        "outputId": "965688ed-5ef8-495e-8c8a-5185ccf49656",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4900\n"
+          ]
+        }
+      ],
       "source": [
         "!ghc -e '49 * 100'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "attributes": {
           "classes": [
@@ -216,16 +264,28 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "FB31kju8_66I"
+        "id": "FB31kju8_66I",
+        "outputId": "73d1d681-e46d-4b32-f27e-01564395b3e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "420\n"
+          ]
+        }
+      ],
       "source": [
         "!ghc -e '1892 - 1472'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "attributes": {
           "classes": [
@@ -235,16 +295,28 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "gpx8ai_h_66I"
+        "id": "gpx8ai_h_66I",
+        "outputId": "c36e9312-34d8-4ddd-ceb4-6d00dec647f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.5\n"
+          ]
+        }
+      ],
       "source": [
         "!ghc -e '5 / 2' #=> 2.5 になる"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "attributes": {
           "classes": [
@@ -254,16 +326,28 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "Vc08RRfS_66J"
+        "id": "Vc08RRfS_66J",
+        "outputId": "52a098a1-9124-4f09-e7bf-18712d511eb1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ],
       "source": [
         "!ghc -e '(50 * 100) - 4999'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "attributes": {
           "classes": [
@@ -273,16 +357,28 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "JYSOYB-Z_66K"
+        "id": "JYSOYB-Z_66K",
+        "outputId": "5f0c8294-49fa-4335-bbb5-0afdc123eb15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ],
       "source": [
         "!ghc -e '50 * 100 - 4999'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "attributes": {
           "classes": [
@@ -292,9 +388,21 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "r43BCjRU_66K"
+        "id": "r43BCjRU_66K",
+        "outputId": "581de55b-07e7-46d3-fd97-cc746645cab6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-244950\n"
+          ]
+        }
+      ],
       "source": [
         "!ghc -e '50 * (100 - 4999)'"
       ]
@@ -310,7 +418,7 @@
       "metadata": {
         "id": "usrAOlpHDtJM"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -319,10 +427,22 @@
         "!ghc -e '3 == 4' #=> False と出力される"
       ],
       "metadata": {
-        "id": "xr0hY2zVD41y"
+        "id": "xr0hY2zVD41y",
+        "outputId": "6eb8a4e9-7074-45df-9ac8-245356b1b9e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -330,10 +450,22 @@
         "!ghc -e 'True || False' #=> True"
       ],
       "metadata": {
-        "id": "NuCc20DyEHud"
+        "id": "NuCc20DyEHud",
+        "outputId": "ed19f842-c700-4380-8d6b-d279a1041c97",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1175,7 +1307,7 @@
         },
         "outputId": "a62cef6c-e470-415e-dd79-ed47d74c138b"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1202,7 +1334,7 @@
         "id": "SDkmxahDKJjS",
         "outputId": "aa80607c-897a-4cd1-d75e-2636ae628df3"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1231,7 +1363,7 @@
         "id": "sCWuQVnELloi",
         "outputId": "704aeaad-52ce-4e18-a14b-d0946ee3c3bd"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
