--- a/algorithm_yonedamasataka.ipynb
+++ b/algorithm_yonedamasataka.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "algorithm_yonedamasataka.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMr7hNCySPauvOO/n1/HjRz",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMi1N+2hreQ+Bg7GLgcQCcd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1377,7 +1378,7 @@
         "\n",
         "int main () {\n",
         "    int N; cin >> N;\n",
-        "    long result = 1; // N = 20 で int では無理になる\n",
+        "    long long result = 1; // N = 20 で int では無理になる\n",
         "    for (int i = 2; i <= N; i++) result *=i;\n",
         "    cout << result << endl;\n",
         "}"
@@ -1436,7 +1437,7 @@
         "\n",
         "int main () {\n",
         "    cout << numeric_limits<int>::max() <<endl;\n",
-        "    cout << numeric_limits<long>::max() <<endl;\n",
+        "    cout << numeric_limits<long long>::max() <<endl;\n",
         "}"
       ],
       "metadata": {
@@ -1666,8 +1667,8 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "int main () {\n",
-        "    long N; cin >> N;\n",
-        "    for (long i = 1; i * i <= N; i++) {\n",
+        "    long long N; cin >> N;\n",
+        "    for (long long i = 1; i * i <= N; i++) {\n",
         "        if (N % i != 0) continue;\n",
         "        cout << i << endl;\n",
         "        if (i != N / i) {\n",
@@ -1683,7 +1684,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1706,7 +1707,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1730,8 +1731,8 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "bool isprime (long N) {\n",
-        "    for (long i = 2; i * i <= N; i++) {\n",
+        "bool isprime (long long N) {\n",
+        "    for (long long i = 2; i * i <= N; i++) {\n",
         "        if (N % i == 0) return false;\n",
         "    }\n",
         "    return true;\n",
@@ -1749,7 +1750,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1772,13 +1773,210 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "isprime\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# p.73\n",
+        "# 問題 素因数分解\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main () {\n",
+        "    long long N; cin >> N;\n",
+        "\n",
+        "\tbool flag = false;\n",
+        "\tfor (long long i = 2; i * i <= N; i++) {\n",
+        "\t\twhile (N % i == 0) { \n",
+        "\t\t\tif (flag == true) cout << \" \";\n",
+        "\t\t\tflag = true;\n",
+        "\t\t\tN /= i;\n",
+        "\t\t\tcout << i;\n",
+        "\t\t}\n",
+        "\t}\n",
+        "\tif (N >= 2) {\n",
+        "\t\tif (flag == true) cout << \" \";\n",
+        "\t\tflag = true;\n",
+        "\t\tcout << N;\n",
+        "\t}\n",
+        "\tcout << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "s6Yp_YpbVsq4",
+        "outputId": "8019cf0c-52f3-4d34-8346-cd666d2fa3e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 100 |./a.out "
+      ],
+      "metadata": {
+        "id": "nPXBQa59VsgI",
+        "outputId": "d28aa448-2e79-49f0-b23a-781627c033cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 2 5 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# p.74 GCD Greatest Common Devisor\n",
+        "# 最大公約数 gcd 非効率バージョン\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "long long GCD (long long A, long long B) {\n",
+        "    long long Answer = 0;\n",
+        "    for (long long i = 1; i <= min(A, B); i++) {\n",
+        "        if (A % i == 0 && B % i == 0) Answer = i;\n",
+        "    }\n",
+        "    return Answer;\n",
+        "}\n",
+        "\n",
+        "int main () {\n",
+        "    long long A, B; cin >> A >> B;\n",
+        "    cout << GCD(A, B) << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "JQKPoc-LVscE",
+        "outputId": "8e1f5cdb-579f-4d53-c027-de01a5d86310",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 8 12 |./a.out "
+      ],
+      "metadata": {
+        "id": "uDUcqZ9x2tSq",
+        "outputId": "b1a4b3ad-8da9-4bac-ab53-e585dcf984bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# p.74 GCD Greatest Common Devisor\n",
+        "# 最大公約数 ユークリッドの互除法バージョン\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "long long GCD (long long A, long long B) {\n",
+        "    while (A >= 1 && B >= 1) {\n",
+        "        if (A < B) B = B % A;\n",
+        "        else A = A % B;\n",
+        "    }\n",
+        "    if (A >= 1) return A;\n",
+        "    return B;\n",
+        "}\n",
+        "\n",
+        "int main () {\n",
+        "    long long A, B; cin >> A >> B;\n",
+        "    cout << GCD(A, B) << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "ZUV6k2rl2-IS",
+        "outputId": "1f818a28-e627-41d5-ea07-b31c1ea1a0a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 8 12 |./a.out "
+      ],
+      "metadata": {
+        "id": "ap37CYPz4emo",
+        "outputId": "6fab53d2-c78f-42b6-ab19-3b82b35d4b14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
           ]
         }
       ]
@@ -1795,42 +1993,66 @@
     {
       "cell_type": "code",
       "source": [
-        "# 問題 素因数分解\n",
+        "# p.79\n",
+        "# 問題 3.2.1 372 と 506 の最大公約数をユークリッドの互除法を用いて計算する過程を示せ\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
+        "\n",
+        "long long GCD (long long A, long long B) {\n",
+        "    while (A >= 1 && B >= 1) {\n",
+        "        if (A < B) B = B % A;\n",
+        "        else A = A % B;\n",
+        "    }\n",
+        "    if (A >= 1) return A;\n",
+        "    return B;\n",
+        "}\n",
+        "\n",
         "int main () {\n",
-        "    long N; cin >> N;\n",
-        "    \n",
+        "    long long A, B; cin >> A >> B;\n",
+        "    cout << gcdSteps(A, B) << endl;\n",
         "}"
       ],
       "metadata": {
-        "id": "s6Yp_YpbVsq4"
+        "id": "hUIAR4DE4eZb",
+        "outputId": "6818eb8b-b53b-4081-9cfe-bb24dd8240a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!g++ temp.cpp; echo 372 506 |./a.out "
       ],
       "metadata": {
-        "id": "nPXBQa59VsgI"
+        "id": "HEqJ4uIE6NBh",
+        "outputId": "e4f831d7-69c8-4fe0-e8b5-e4d6ca58a148",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "JQKPoc-LVscE"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1847,6 +2069,7 @@
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
+        "\n",
         "int main () {}"
       ],
       "metadata": {
