Colaboratory を使用して作成しました

--- a/algorithm_yonedamasataka.ipynb
+++ b/algorithm_yonedamasataka.ipynb
@@ -6,7 +6,7 @@
       "name": "algorithm_yonedamasataka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMxa5cQQ/wwDOSsm69R6P8r",
+      "authorship_tag": "ABX9TyPRzYcj+fI0Vzir/5k4QJVG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2077,13 +2077,11 @@
       "cell_type": "code",
       "source": [
         "# 問題 3.2.2 ユークリッドの互除法を用いて N 個の正の整数 A_1,A_2,...,A_N の最大公約数を求める\n",
-        "# p.79\n",
-        "# 問題 3.2.1 372 と 506 の最大公約数をユークリッドの互除法を用いて計算する過程を示せ\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "long long GCD (long long A, long long B) {\n",
+        "int GCD (int A, int B) {\n",
         "    while (A >= 1 && B >= 1) {\n",
         "        if (A < B) B = B % A;\n",
         "        else A = A % B;\n",
@@ -2092,17 +2090,35 @@
         "    return B;\n",
         "}\n",
         "\n",
+        "int multiGCD(vector<int> vec) {\n",
+        "    if (vec == {}) return 0;\n",
+        "    else return multiGCD()\n",
+        "}\n",
+        "\n",
         "int main () {\n",
-        "    long long N; cin >> N;\n",
-        "    vector \n",
-        "    \n",
+        "    int N; cin >> N;\n",
+        "    vector<int> A(N);\n",
+        "    for (int i = 0; i < N; i++) cin >> A.at(i);\n",
+        "    cout << multiGCD(A) << endl;\n",
         "}"
       ],
       "metadata": {
-        "id": "pOc6iEv-VH9I"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pOc6iEv-VH9I",
+        "outputId": "658ecf21-ae0a-4ca7-a666-dd68a2e27d02"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2112,7 +2128,7 @@
       "metadata": {
         "id": "OdqBkN0CVHl3"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
