Colaboratory を使用して作成しました

--- a/algorithm_yonedamasataka.ipynb
+++ b/algorithm_yonedamasataka.ipynb
@@ -6,7 +6,7 @@
       "name": "algorithm_yonedamasataka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPRzYcj+fI0Vzir/5k4QJVG",
+      "authorship_tag": "ABX9TyMrOFLO2cbMr5ljAymrmwS+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2021,7 +2021,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2046,7 +2046,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2090,16 +2090,15 @@
         "    return B;\n",
         "}\n",
         "\n",
-        "int multiGCD(vector<int> vec) {\n",
-        "    if (vec == {}) return 0;\n",
-        "    else return multiGCD()\n",
-        "}\n",
-        "\n",
         "int main () {\n",
         "    int N; cin >> N;\n",
         "    vector<int> A(N);\n",
         "    for (int i = 0; i < N; i++) cin >> A.at(i);\n",
-        "    cout << multiGCD(A) << endl;\n",
+        "    int answer = numeric_limits<int>::max();\n",
+        "    for (int i = 0; i < N - 1; i++) {\n",
+        "        if (GCD(A.at(i), A.at(i + 1)) < answer) answer = GCD(A.at(i), A.at(i + 1));\n",
+        "    }\n",
+        "    cout << answer << endl;\n",
         "}"
       ],
       "metadata": {
@@ -2107,9 +2106,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pOc6iEv-VH9I",
-        "outputId": "658ecf21-ae0a-4ca7-a666-dd68a2e27d02"
+        "outputId": "203e1332-3bac-4918-a1d6-96ab55476317"
       },
-      "execution_count": 17,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -2126,9 +2125,110 @@
         "!g++ temp.cpp; echo 3 100 200 300 |./a.out "
       ],
       "metadata": {
-        "id": "OdqBkN0CVHl3"
+        "id": "OdqBkN0CVHl3",
+        "outputId": "93a0601a-91ed-4c68-95b8-53a7f3737fb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 18,
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 3.2.2 ユークリッドの互除法を用いて N 個の正の整数 A_1,A_2,...,A_N の最大公約数を求める\n",
+        "# 別バージョン\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "long long GCD(long long A, long long B) {\n",
+        "\twhile (A >= 1 && B >= 1) {\n",
+        "\t\tif (A < B) B = B % A; // A < B の場合、大きい方 B を書き換える\n",
+        "\t\telse A = A % B; // A >= B の場合、大きい方 A を書き換える\n",
+        "\t}\n",
+        "\tif (A >= 1) return A;\n",
+        "\treturn B;\n",
+        "}\n",
+        "\n",
+        "long long N;\n",
+        "long long A[100009];\n",
+        "\n",
+        "int main() {\n",
+        "\t// 入力\n",
+        "\tcin >> N;\n",
+        "\tfor (int i = 1; i <= N; i++) cin >> A[i];\n",
+        "\t\n",
+        "\t// 答えを求める\n",
+        "\tlong long R = GCD(A[1], A[2]);\n",
+        "\tfor (int i = 3; i <= N; i++) {\n",
+        "\t\tR = GCD(R, A[i]);\n",
+        "\t}\n",
+        "\t\n",
+        "\t// 出力\n",
+        "\tcout << R << endl;\n",
+        "\treturn 0;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "eQxT5V_mByVf",
+        "outputId": "cf2cb5d9-b328-44f7-b388-2534e65e6c29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 100 200 300 |./a.out"
+      ],
+      "metadata": {
+        "id": "tbcTztztVHhK",
+        "outputId": "512fa6f2-da7c-4736-fb19-5aa3a9aa0f5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# p.80 場合の数とアルゴリズム"
+      ],
+      "metadata": {
+        "id": "KUZCiw71GkDR"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2137,7 +2237,7 @@
         ""
       ],
       "metadata": {
-        "id": "tbcTztztVHhK"
+        "id": "yCq4Wi7qGkSY"
       },
       "execution_count": null,
       "outputs": []
