Colaboratory を使用して作成しました

--- a/algorithm_yonedamasataka.ipynb
+++ b/algorithm_yonedamasataka.ipynb
@@ -6,7 +6,7 @@
       "name": "algorithm_yonedamasataka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMrOFLO2cbMr5ljAymrmwS+",
+      "authorship_tag": "ABX9TyOpsCE+clVCz6/lLBq6Mwvf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2065,15 +2065,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "iA9PT-kyMvic"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 問題 3.2.2 ユークリッドの互除法を用いて N 個の正の整数 A_1,A_2,...,A_N の最大公約数を求める\n",
@@ -2108,7 +2099,7 @@
         "id": "pOc6iEv-VH9I",
         "outputId": "203e1332-3bac-4918-a1d6-96ab55476317"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2131,7 +2122,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2186,7 +2177,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2209,7 +2200,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2223,10 +2214,88 @@
     {
       "cell_type": "code",
       "source": [
-        "# p.80 場合の数とアルゴリズム"
+        "# p.80 場合の数とアルゴリズム\n",
+        "# 問題ID:018 N 個の商品があり、それぞれ A_i 円である。2 つの品物で合計が 500 円になるものは何通りか。\n",
+        "# 価格は 100, 200, 300, 400 のいずれかとする。 \n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    int N; cin >> N;\n",
+        "    vector<int> vec(N);\n",
+        "    for (int i = 0; i < N; i++) cin >> vec.at(i);\n",
+        "    int a, b, c, d; // それぞれ 100,200,300,400円の品物の数\n",
+        "\n",
+        "    // (a * d + b * c) が求める答え\n",
+        "    a = 0; b = 0; c = 0; d = 0;\n",
+        "    for (int i = 0; i < N; i++) {\n",
+        "        if (vec.at(i) == 100) a++;\n",
+        "        else if (vec.at(i) == 200) b++;\n",
+        "        else if (vec.at(i) == 300) c++;\n",
+        "        else if (vec.at(i) == 400) d++;\n",
+        "    }\n",
+        "    cout << (a * d + b * c) << endl;\n",
+        "}"
       ],
       "metadata": {
-        "id": "KUZCiw71GkDR"
+        "id": "KUZCiw71GkDR",
+        "outputId": "d06e72ad-6ce0-4ebd-8fd5-c384af14d339",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 7 100 400 200 200 300 100 400 |./a.out "
+      ],
+      "metadata": {
+        "id": "yCq4Wi7qGkSY",
+        "outputId": "bc1fa76a-f965-4def-ba30-8d88ec05b393",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "iA9PT-kyMvic"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "OY4UA85LYJtv"
       },
       "execution_count": null,
       "outputs": []
@@ -2237,7 +2306,18 @@
         ""
       ],
       "metadata": {
-        "id": "yCq4Wi7qGkSY"
+        "id": "HkKlAw9yYJ22"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "F4DI3wDHYKAm"
       },
       "execution_count": null,
       "outputs": []
