Colaboratory を使用して作成しました

--- a/algorithm_yonedamasataka.ipynb
+++ b/algorithm_yonedamasataka.ipynb
@@ -6,7 +6,7 @@
       "name": "algorithm_yonedamasataka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMb2CMxkHVUyl5Z8kJ1fyQQ",
+      "authorship_tag": "ABX9TyOy+mYOwJW/y5r0q0eEavyG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2296,6 +2296,82 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# p.85 全探索の計算回数\n",
+        "# 問題ID:020\n",
+        "# N 枚のカードに整数 A_i が書かれている\n",
+        "# カードを 5 枚選ぶ方法の内、和がちょうど 1000 となるものは何通りあるか\n",
+        "# 計算量は 100^5 ではなくカードを選ぶ方法は N = 100 とすると _100 C_5 である\n",
+        "# なので通常の全探索をやってかまわない\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main () {\n",
+        "    int N, A[109];\n",
+        "    int Answer = 0;\n",
+        "    cin >> N;\n",
+        "    for (int i = 1; i <= N; i++) cin >> A[i];\n",
+        "\n",
+        "    // 5 つのカード i,j,k.l,m を全探索\n",
+        "    for (int i = 1; i <= N; i++) {\n",
+        "        for (int j = 1 + 1; j <= N; j++) {\n",
+        "            for (int k = j + 1; k <= N; k++) {\n",
+        "                for (int l = k + 1; l <= N; l++) {\n",
+        "                    for (int m = l + 1; m <= N; m++) {\n",
+        "                        if (A[i]+A[j]+A[k]+A[l]+A[m] == 1000) Answer++;\n",
+        "                    }\n",
+        "                }\n",
+        "            }\n",
+        "        }\n",
+        " \n",
+        "   }\n",
+        "   cout << Answer << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "HkKlAw9yYJ22",
+        "outputId": "c5192d19-2502-4816-c0b4-bc3ef6c2fdbd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 6 1 250 250 100 200 200 |./a.out "
+      ],
+      "metadata": {
+        "id": "F4DI3wDHYKAm",
+        "outputId": "5f403a1b-86fe-45be-a432-f41514e518b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# いまここ"
@@ -2307,22 +2383,54 @@
     {
       "cell_type": "code",
       "source": [
-        "# p.85 全探索の計算回数\n",
-        "# 問題ID:020\n",
-        "# N 枚のカードに整数 A_i が書かれている\n",
-        "# カードを 5 枚選ぶ方法の内、和がちょうど 1000 となるものは何通りあるか\n",
-        "# カードを選ぶ方法は N = 100 とすると _100 C_5 である\n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main () {\n",
-        "    int\n",
-        "\n",
-        "}"
+        "# p.86\n",
+        "# 問題 3.3.1 _2C1, _8C5, _7P2, _10P3 を計算する\n",
+        "# 2, 56, 42, 720"
       ],
       "metadata": {
-        "id": "HkKlAw9yYJ22"
+        "id": "SZ_SM5w72mAE"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 3.3.2 ケーキ屋で大きさ、トッピング、ネームプレートを選べる\n",
+        "# 大きさ : 小、中、大、特大\n",
+        "# トッピング : 林檎、バナナ、オレンジ、ブルーベリー、チョコ\n",
+        "# ネームプレート : あり、なし\n",
+        "# ケーキを買う方法は何通りあるか\n",
+        "# 4*5*2 => 40 通り"
+      ],
+      "metadata": {
+        "id": "u-KCCPgd2mJr",
+        "outputId": "282d7366-167a-412c-9ebb-6ec1e4656a32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "42"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "UbBj9PYZ2nPQ"
       },
       "execution_count": null,
       "outputs": []
@@ -2333,7 +2441,18 @@
         ""
       ],
       "metadata": {
-        "id": "F4DI3wDHYKAm"
+        "id": "wkRV-ZuW5XR9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "nCQZP_Pq5XtK"
       },
       "execution_count": null,
       "outputs": []
