Colaboratory を使用して作成しました

--- a/algorithm_yonedamasataka.ipynb
+++ b/algorithm_yonedamasataka.ipynb
@@ -6,7 +6,7 @@
       "name": "algorithm_yonedamasataka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNbUlJi8BjKgcGTrlR2QkNX",
+      "authorship_tag": "ABX9TyOL39a9YxOTsfEbyqKzd01H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2526,7 +2526,34 @@
     {
       "cell_type": "code",
       "source": [
-        "# 問題 3.3.6 "
+        "# 問題 3.3.6 \n",
+        "\n",
+        "\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "long long N, A[200009];\n",
+        "long long cnt[100009];\n",
+        "long long Answer = 0;\n",
+        "\n",
+        "int main() {\n",
+        "\t// 入力\n",
+        "\tcin >> N;\n",
+        "\tfor (int i = 1; i <= N; i++) cin >> A[i];\n",
+        "\t\n",
+        "\t// cnt[1], cnt[2], ..., cnt[99999] を数える\n",
+        "\tfor (int i = 1; i <= 99999; i++) cnt[i] = 0;\n",
+        "\tfor (int i = 1; i <= N; i++) cnt[A[i]] += 1;\n",
+        "\t\n",
+        "\t// 答えを求める\n",
+        "\tfor (int i = 1; i <= 49999; i++) {\n",
+        "\t\tAnswer += cnt[i] * cnt[100000 - i];\n",
+        "\t}\n",
+        "\tAnswer += cnt[50000] * (cnt[50000] - 1) / 2;\n",
+        "\t\n",
+        "\tcout << Answer << endl;\n",
+        "}"
       ],
       "metadata": {
         "id": "bDE8oKtev3Ci"
