Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOfsOa+9Rng0XUfl6HCXo7S",
+      "authorship_tag": "ABX9TyMnmvMg++bykC7t7NYYpaYI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,56 @@
     {
       "cell_type": "code",
       "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "M-o38LGKgCfE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# まだ考え中\n",
+        "# その\n",
+        "\n",
+        "# 問題 ガチャコンプ確率 100 円ガチャポンで N 種類の商品が等確率で出現する\n",
+        "# M 回で全種類揃う確率を計算する\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main () {\n",
+        "    int N, M; cin >> N >> M;\n",
+        "    double prob = 1.0;\n",
+        "    for (int i = N; i < M; i++) {\n",
+        "        Answer *= \n",
+        "    }\n",
+        "    cout << 1.0 - prob << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "K90bn-H2ptcc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 6 14 |./a.out \n",
+        "!g++ temp.cpp; echo 6 22 |./a.out "
+      ],
+      "metadata": {
+        "id": "T3KsRqsIusaI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# c++ で regex を使って行末の空白を取り除く \n",
         "# \"this  \" を ”this\" に出来ればよい\n",
         "%%writefile temp.cpp\n",
@@ -60,7 +110,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +133,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
