--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMnmvMg++bykC7t7NYYpaYI",
+      "authorship_tag": "ABX9TyOlMMu03hgMm1zv0yRnB9CT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,19 +39,87 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# コンプ確率部品\n",
+        "# 最後の1つが当たらない確率は  1 - 1/n => (N - 1) / N\n",
+        "# 1% の場合だと (100 - 1)/100\n",
+        "# 最後の 2 つの時、その 2 つの内 1 つも当たらない確率は当たる確率が 1 / (N - 1) なのだから\n",
+        "# (N - 2) / N\n",
+        "# 数列にしてみよう \n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main () {\n",
+        "    int N = 6;\n",
+        "    double expectValue = 0;\n",
+        "    for (int i = N; i >= 1; i--) {\n",
+        "        cout << 1 / (double)(i) << endl;\n",
+        "        expectValue += N / (double)(i);\n",
+        "    }\n",
+        "    cout << expectValue << endl;\n",
+        "    for (int i = N; i >= 1; i--) {\n",
+        "        cout << (1.0 - 1 / (double)(i)) << endl;\n",
+        "    }\n",
+        "}"
       ],
       "metadata": {
-        "id": "M-o38LGKgCfE"
+        "id": "M-o38LGKgCfE",
+        "outputId": "2176c1c3-b51d-4ab4-bf0b-4c21b39bdba4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo  |./a.out "
+      ],
+      "metadata": {
+        "id": "OzZD78RrqI4n",
+        "outputId": "5596f479-dbfc-4fa1-c499-9983b4a0b650",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.166667\n",
+            "0.2\n",
+            "0.25\n",
+            "0.333333\n",
+            "0.5\n",
+            "1\n",
+            "14.7\n",
+            "0.833333\n",
+            "0.8\n",
+            "0.75\n",
+            "0.666667\n",
+            "0.5\n",
+            "0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# まだ考え中\n",
-        "# その\n",
+        "# その前に\n",
         "\n",
         "# 問題 ガチャコンプ確率 100 円ガチャポンで N 種類の商品が等確率で出現する\n",
         "# M 回で全種類揃う確率を計算する\n",
